# github0403

./: .gitignore  Puppeteer重构0507.md  README.md  akshare股票信息.md  package-lock.json  package.json  requirements.txt  save_wechat_article.py  save_wechat_article_puppeteer.mjs  server.mjs  提炼观点agent 能力对比-codex.md  提炼观点agent 能力对比.md
scripts/: update_stock_catalog.py  update_stock_prices.py
server/: server.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/cli/: fetch-article.mjs
src/config/: constants.mjs  env.mjs
src/core/: analyze-article.mjs  browser-session.mjs  capture-article.mjs  deepseek-analyzer.mjs  export-article.mjs  image-cache.mjs  list-account-articles.mjs  parse-article.mjs  personal-note.mjs  sector-tracker.mjs  stock-tracker.mjs
src/server/: http-utils.mjs  task-queue.mjs
src/storage/: article-index.mjs  file-layout.mjs  paths.mjs
src/utils/: date.mjs  sanitize.mjs  text.mjs  url.mjs
tests/fixtures/: wechat-article.html
tests/unit/: analyze-article.test.mjs  article-index-upsert.test.mjs  article-index.test.mjs  export-article.test.mjs  file-layout.test.mjs  image-cache.test.mjs  note-markdown.test.mjs  parse-article.test.mjs  paths.test.mjs  personal-note.test.mjs  research-utils.test.mjs  sanitize-url.test.mjs  sector-tracker.test.mjs  stock-tracker.test.mjs  task-queue.test.mjs
webapp/: api-client.mjs  app.css  app.js  formatters.mjs  index.html  note-markdown.mjs  research-utils.mjs
