[package]
name = "wechat-author-tracker"
version = "1.0.0"
description = "微信公众号作者跟踪台桌面客户端"
authors = ["li"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
url = "2"

[profile.release]
codegen-units = 1
lto = true
strip = true
